[gd_scene load_steps=3 format=3 uid="uid://bax6du6fw40m"]

[ext_resource type="Script" uid="uid://c4itwthuhxsgd" path="res://scenes/main_menu/main_menu.gd" id="1_fsom3"]
[ext_resource type="PackedScene" uid="uid://b6yerdtx4hvrg" path="res://objects/ui/button/button.tscn" id="2_0ebjn"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fsom3")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -105.64
offset_top = -60.0
offset_right = 105.64
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2

[node name="ErrorLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.9843137, 0.28627452, 0.20392157, 1)

[node name="IP" type="LineEdit" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "IP (def: localhost)"

[node name="Name" type="LineEdit" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Name here..."

[node name="Host" parent="VBoxContainer" instance=ExtResource("2_0ebjn")]
custom_minimum_size = Vector2(87, 18.333334)
layout_mode = 2
button_text = "Host game"

[node name="Join" parent="VBoxContainer" instance=ExtResource("2_0ebjn")]
custom_minimum_size = Vector2(87, 18.333334)
layout_mode = 2
button_text = "Join game"

[node name="Button" parent="VBoxContainer" instance=ExtResource("2_0ebjn")]
layout_mode = 2

[connection signal="pressed" from="VBoxContainer/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="VBoxContainer/Join" to="." method="_on_join_pressed"]
